parser/src/test/resources/corpus/valid/34_publish_simple.ff
rule "Publish Result" {
  publish result
}
