parser/src/test/resources/corpus/invalid/36_then_without_when.ff
rule "Stray Then" {
  then publish fee
}
